--- a/frontend/src/pages/Orders.css
+++ b/frontend/src/pages/Orders.css
@@ -64,6 +64,7 @@
   font-size: 14px;
   color: #555;
   line-height: 1.6;
+  margin-left: 300px;
 }
 
 .store {
@@ -115,4 +116,7 @@
 .orange {
   background: #ffedd5;
   color: #ea580c;
+}
+.product-name{
+  color: #000000;
 }
