--- a/frontend/src/components/Navbar1.css
+++ b/frontend/src/components/Navbar1.css
@@ -1,16 +1,15 @@
 .navbar {
-    display: flex;
-    align-items: center;
-    gap: 22px;
-    padding: 10px 18px;
-    background-color: #131921;
-    color: white;
-    font-family: Arial, sans-serif;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-    margin-bottom: 100px;
-  }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 70px;
+  z-index: 1000;
+  background: #131921;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
   
   /* LOGO */
   .nav-left {
@@ -63,4 +62,5 @@
     flex-direction: column;
     font-size: 13px;
   }
+  
   
